tests/lean/withLocationImplementationDetails.lean.expected.out
withLocationImplementationDetails.lean:5:28-7:25: error: unsolved goals
h : B = 3
⊢ B = 3
